# SteamSelfGifter

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  config.ini.sample  docker-compose.dev.yml  docker-compose.yml
backend/: README.md  pyproject.toml
backend/src/alembic/: env.py
backend/src/api/: dependencies.py  main.py  middleware.py
backend/src/core/: config.py  events.py  exceptions.py  logging.py  time.py
backend/src/db/: session.py
backend/src/models/: activity_log.py  base.py  entry.py  game.py  giveaway.py  scheduler_state.py  settings.py
backend/src/repositories/: activity_log.py  base.py  entry.py  game.py  giveaway.py  settings.py
backend/src/services/: eligibility.py  game_service.py  giveaway_entry.py  giveaway_query.py  giveaway_service.py  giveaway_sync.py  notification_service.py  scheduler_service.py  settings_service.py
backend/src/utils/: steam_client.py  steamgifts_client.py  steamgifts_parser.py
backend/src/workers/: automation.py  context.py  processor.py  safety_checker.py  scanner.py  scheduler.py
backend/tests/: conftest.py
backend/tests/e2e/: test_analytics_api.py  test_scheduler_api.py  test_settings_api.py  test_system_api.py
backend/tests/fixtures/: empty_search_page.html  giveaway_page.html  giveaway_page_description.html  wishlist_page.html
backend/tests/integration/: __init__.py  conftest.py  test_api_endpoints.py  test_settings_service.py  test_steamgifts_client.py
backend/tests/integration_mocked/: __init__.py  conftest.py  test_steam_client_http.py  test_steamgifts_client_http.py
backend/tests/scripts/: README.md  fetch_entered_page.py  fetch_giveaway_page.py  fetch_wishlist_page.py  (+1 more)
(+161 files in other folders)
